Make sure video poster covers the entire video element

--- a/xrtube/style/main.scss
+++ b/xrtube/style/main.scss
@@ -10,6 +10,9 @@
     --vpad: 0.375rem;
     --radius: 0.6rem;
     --accent: #2a32a9;
+
+    // media-chrome variables
+    --media-object-fit: cover;
 }
 
 html {
